tests/ui/not_eq_relation.stderr
error[E0277]: the trait bound `f64: Hash` is not satisfied
   --> $DIR/not_eq_relation.rs:8:15
    |
8   |     struct Ok(f64);
    |               ^^^ the trait `Hash` is not implemented for `f64`
    |
   ::: $RUST/core/src/hash/mod.rs
    |
    |     fn hash<H: Hasher>(&self, state: &mut H);
    |             - required by this bound in `std::hash::Hash::hash`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: Eq` is not satisfied
   --> $DIR/not_eq_relation.rs:8:15
    |
8   |     struct Ok(f64);
    |               ^^^ the trait `Eq` is not implemented for `f64`
    |
   ::: $RUST/core/src/cmp.rs
    |
    | pub struct AssertParamIsEq<T: Eq + ?Sized> {
    |                               -- required by this bound in `AssertParamIsEq`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
